--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -57,3 +57,12 @@ html, body {
     outline: none;
     padding: 10px;
 }
+
+/* Date picker*/
+.react-datetime-picker input:focus {
+    outline: none;
+}
+
+.react-datetime-picker__wrapper {
+    border: 0px solid gray !important;
+}
